CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_FILE(SMART_MACROS SmartMacros2.cmake PATHS $ENV{SMART_ROOT_ACE}/CMakeMacros /opt/smartSoftAce/CMakeMacros)
INCLUDE(${SMART_MACROS})

SMART_UTILITY_PROJECT(SmartCdlCalculate)

SMART_VERSION(1.0.0)

SMART_UTILITY_BUILD_DEBIAN_PACKAGE(${PROJECT_NAME} ${PACKAGE_VERSION_STRING})

#SET(HDRS smartCdlCons.hh smartCdlTypes.hh)
#SET(SRCS smartCdlCalculate.cc)
SET(TESTS smartCdlCalculate.cc)

find_package( ZLIB REQUIRED)
LIST(APPEND USER_INCLUDES ${ZLIB_INCLUDE_DIRS})
LIST(APPEND USER_LIBS ${ZLIB_LIBRARIES}) 

# create the SmartSickInterface utility
#SMART_UTILITY_ADD_LIBRARY(${PROJECT_NAME})
INCLUDE_DIRECTORIES(${USER_INCLUDES})

ADD_EXECUTABLE(${PROJECT_NAME} ${TESTS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${USER_LIBS})

#SMART_UTILITY_INSTALL(${PROJECT_NAME})



