CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_FILE(SMART_MACROS SmartMacros2.cmake PATHS $ENV{SMART_ROOT_ACE}/CMakeMacros /opt/smartSoftAce/CMakeMacros)
INCLUDE(${SMART_MACROS})

SMART_UTILITY_PROJECT(SmartOmniCdlCalculate)

SMART_UTILITY_BUILD_DEBIAN_PACKAGE(${PROJECT_NAME} ${PACKAGE_VERSION_STRING})

#SET(HDRS smartCdlCons.hh smartCdlTypes.hh)
#SET(SRCS smartCdlCalculate.cc)
FILE(GLOB SRC_FILES *.cpp)

# create the SmartSickInterface utility
#SMART_UTILITY_ADD_LIBRARY(${PROJECT_NAME})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
#ADD_DEPENDENCIES(${PROJECT_NAME}Tests ${PROJECT_NAME})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME}Tests ${PROJECT_NAME})

#SMART_UTILITY_INSTALL(${PROJECT_NAME})



